<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stats_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.stats.disease.healthstats.ViewStatsActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_button_height"
        android:layout_marginBottom="@dimen/welcome_button_marginBottom"
        android:background="@drawable/round_button"
        android:drawableLeft="@drawable/locality"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/for_a_locality"
        android:id="@+id/locality_chart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_button_height"
        android:layout_marginBottom="@dimen/welcome_button_marginBottom"
        android:background="@drawable/round_button"
        android:drawableLeft="@drawable/diseases"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/for_a_disease"
        android:id="@+id/disease_chart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_button_height"
        android:layout_marginBottom="@dimen/welcome_button_marginBottom"
        android:background="@drawable/round_button"
        android:drawableLeft="@drawable/time"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/over_time"
        android:id="@+id/time_chart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_button_height"
        android:layout_marginBottom="@dimen/welcome_button_marginBottom"
        android:background="@drawable/round_button"
        android:drawableLeft="@drawable/map_icon"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/disease_map"
        android:id="@+id/disease_map"/>

</LinearLayout>
