<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trans_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.stats.disease.healthstats.LoginSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_button_marginBottom"
            android:text="@string/login_title"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:textSize="50sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/age_group_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/age_group"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            style="@style/AppTheme"
            android:id="@+id/age_group_spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone"
        android:id="@+id/gender_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/gender"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#640000"
                android:textStyle="bold"
                android:text="@string/male"
                android:id="@+id/gender_male_radio"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#640000"
                android:textStyle="bold"
                android:text="@string/female"
                android:id="@+id/gender_female_radio"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#640000"
                android:textStyle="bold"
                android:text="@string/other"
                android:id="@+id/gender_other_radio"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone"
        android:id="@+id/locality_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/locality"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            style="@style/AppTheme"
            android:id="@+id/locality_spinner"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/user_id_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/login_user_id"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:textSize="18sp"
            android:textColor="#640000"
            android:inputType="text"
            android:id="@+id/user_id_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone"
        android:id="@+id/check_availability_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="@string/check_availability"
            android:id="@+id/check_availability_button"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/check_availability_output"/>
        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:visibility="gone"
            android:id="@+id/check_availability_progress_bar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/password_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/login_password"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:textSize="18sp"
            android:textColor="#640000"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone"
        android:id="@+id/confirm_pass_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/confirm_password"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:textSize="18sp"
            android:textColor="#640000"
            android:inputType="textPassword"
            android:id="@+id/confirm_password_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:id="@+id/login_buttons_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"
                android:text="@string/login_string"
                android:id="@+id/login_main_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"
                android:text="@string/signup_string"
                android:id="@+id/signup_fake_button"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/signup_string"
            android:visibility="gone"
            android:id="@+id/main_signup_button"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/main_progress_bar"/>

    </LinearLayout>

</LinearLayout>
